# water

./: .gitignore  2373 Evergreen Shores GGHG-5709325.csv  2373 Test System GGHG-5709325.csv  CG_storage.py  LICENSE  README.md  RI_storage.py  Tank.py  Thumbs.db  Untitled.ipynb  code_reference.rst  conf.py  contributions.md  fittings.py  ftw_injection.py  ftw_jpnote.html  ftw_jpnote.ipynb  genset.py  gh test.docx  horiz_test.py  index.rst  lp_tank_size.py  meter_data.ipynb  meter_data.xlsx  pyproject.toml  scratch.ipynb  storage_opt.py  tankTest.py  test.py
Water/: Imperial_properties.py  SI_properties.py  __init__.py  data.py  fittings.py  genset.py  loadPumps.py  pipe.py  pumps.db  pumps.py  straightLength.py  tanks.py  tools.py  water.db
Water/docs/: code_reference.rst  conf.py  data.rst  detailed_pump_sizing.html  index.rst  pumpDB.txt  tutorial.rst
Water/pumps/: 25GS50-GOULDS_3500.csv  35GS50-GOULDS_3500.csv  3642_1x1-25_GOULDS_3500.csv  3657_1-5x2_GOULDS_3500.csv  75GS100CB-GOULDS_3500.csv  (+5 more)
docs/: Makefile  TODO.md  conf.py  data.rst  detailed_pump_size.ipynb  index.rst
examples/: 2373 Test System GGHG-5709325.csv  CG_storage.py  RI_storage.py  Thumbs.db  ftw_injection.py  ftw_jpnote.ipynb  horiz_test.py  lp_tank_size.py  meter_data.ipynb  pipe_class_ex.py  pump_class_ex.py  tanktest.py  test.py
pumps/: 25GS50-GOULDS_3500.csv  35GS50-GOULDS_3500.csv  3642_1x1-25_GOULDS_3500.csv  3657_1-5X2_GOULDS_3500.csv  75GS100CB-GOULDS_3500.csv  85GS100-GOULDS_3500.csv  85GS75-GOULDS_3500.csv  85S100-9-GRUNDFOS_3500.csv  CM1-2-A-GRUNFOS.csv  CMBE_5-62-GRUNFOS.csv
(+107 files in other folders)
